force-app/main/default/objects/Careers__c/Careers__c.object-meta.xml
<CustomObject>
    <label>Careers</label>
    <nameField>
        <displayFormat>Careers-{00}</displayFormat>
        <label>Careers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Careers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>