force-app/main/default/objects/Careers__c/fields/Application_Form__c.field-meta.xml
<CustomField>
    <fullName>Application_Form__c</fullName>
    <label>Application Form</label>
    <type>Url</type>
</CustomField>