force-app/main/default/objects/Careers__c/fields/Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description__c</fullName>
    <label>Brief Description</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>