force-app/main/default/objects/Careers__c/fields/Job_Description_PDF__c.field-meta.xml
<CustomField>
    <fullName>Job_Description_PDF__c</fullName>
    <label>Job Description PDF</label>
    <type>Url</type>
</CustomField>