force-app/main/default/objects/Careers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Title__c</columns>
    <columns>Job_Description_PDF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>